# rjm-backend

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  pytest.ini
app/: main.py
app/api/: __init__.py  test_items.py
app/config/: __init__.py  logger.py  settings.py
app/db/: __init__.py  db.py  seed.py  supabase_db.py
app/models/: __init__.py  audit_log.py  chat_session.py  persona_generation.py  rjm_document.py  test_item.py  user.py  user_connector.py
app/services/: category_mapping.py  chat_persistence.py  mira_activation.py  mira_behavioral_engine.py  mira_chat.py  mira_reasoning_engine.py  mira_session.py  mira_world_model.py  persona_authority.py  rjm_canon.py  rjm_ingredient_canon.py  rjm_rag.py  rjm_sync.py  rjm_vector_store.py  transcription.py
app/utils/: __init__.py  audit.py  auth.py  local_tokens.py  passwords.py  responses.py  supabase_client.py
docs/: RJM_MIRA_BACKEND.md
phase_3_docs/: MIRA_behavioral_engine_.json  mira_activation__output_blocks_module_4.txt  mira_activation_budget_pacing_module_2.txt  mira_activation_flighting_module_3.txt  mira_activation_platform_logic_module_5.txt  mira_activation_platform_path_module_1.txt
rjm_docs/: Narrative Library 10-23-25.txt  Packaging Logic MASTER 10-22-25.txt  Phylum Index MASTER 10-22-25.txt
scripts/: chat_tables.sql  seed_admin.py
supabase/: README.md  schema.sql
tests/: mira_chat_cli.py  smb_conversation_test.py  test_category_detection.py  test_mira_activation.py  test_mira_chat.py  test_mira_generation.py  test_status.py
(+18 files in other folders)
